--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -28,6 +28,12 @@ body {
   flex-direction: column;
   min-height: 100vh;
   background-color: black;
+
+  // background: linear-gradient(
+  //   to bottom,
+  //   (rgb(61, 140, 209)),
+  //   rgba(251, 194, 235)
+  // );
 }
 
 main {
