--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,9 +1,21 @@
 .container {
+  // Zet hem bovenaan
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 90px;
+
+  // Achtergrond magic
+  backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(17, 25, 40, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.125);
+
   display: flex;
-  width: 100%;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 16px 32px;
   gap: 32px;
   flex-wrap: wrap;
 }
