--- a/src/app/contact/contact.module.scss
+++ b/src/app/contact/contact.module.scss
@@ -1,32 +1,30 @@
 .container {
-  display: flex;
-  max-width: 1000px;
+  backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(17, 25, 40, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.125);
+  max-width: 700px;
   margin: 80px auto auto;
   gap: 100px;
-  font-size: 20px;
+  border-radius: 5px;
+  padding: 50px;
 }
 
-.text {
-  display: flex;
-  gap: 16px;
+.input {
+  width: 100%;
+  padding: 10px;
+  border: 3px solid #ccc;
+  border-radius: 6px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
-.overlay {
-  border-radius: 16px;
-  background-color: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0;
+.submit {
+  background-color: #000000;
   color: white;
-  font-size: 20px;
-  letter-spacing: 1.6px;
-  text-align: center;
-  padding: 16px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  transition: opacity 300ms ease-in-out;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
